2002-01-07  Ulrich Drepper  <drepper@redhat.com>

	* libio/fileops.c (_IO_file_underflow_mmap): New function.
	(_IO_file_close_mmap): New function.
	(_IO_file_jumps_mmap): New variable.
	* libio/wfileops.c (_IO_wfile_underflow): Reset read pointer before
	trying to convert rest of byte buffer.
	(_IO_wfile_underflow_mmap): New function.
	(_IO_wfile_jumps_mmap): New variable.
	* libio/iofopen.c (__fopen_maybe_mmap): New function.
	(__fopen_internal): New function.  Split out from _IO_new_fopen.
	(_IO_new_fopen): Call __fopen_internal.
	* libio/iofopen64.c: Just call __fopen_internal.
	* libio/iofdopen.c: Call __fopen_maybe_mmap before returning
	successfully.
	* libio/iolibio.h: Declare __fopen_internal and __fopen_maybe_mmap.
	* libio/libioP.h: Declare _IO_file_jumps_mmap, _IO_wfile_jumps_mmap,
	_IO_file_close_mmap.

	* sysdeps/gnu/_G_config.h: Define _G_MMAP64.
	* sysdeps/unix/sysv/linux/cris/_G_config.h: Likewise.

	* stdio-common/Makefile (tests): Add tst-rndseek.
	* stdio-common/tst-rndseek.c: New file.

2002-01-05  Roland McGrath  <roland@frob.com>

	* config.h.in (HAVE_MIG_RETCODE): New #undef.
	* sysdeps/mach/hurd/configure.in (hurd_MIG_RETCODE: New macro
	swiped from hurd package's aclocal.m4; use it to set HAVE_MIG_RETCODE.
	* sysdeps/mach/hurd/configure: Regenerated.

2002-01-03  Ulrich Drepper  <drepper@redhat.com>

	* elf/elf.h: Add more TLS definitions.

2002-01-02  Ulrich Drepper  <drepper@redhat.com>

	* include/features.h (__GLIBC_MINOR__): Bump to 3.

2002-01-02  Roland McGrath  <roland@frob.com>

	* sysdeps/mach/hurd/sigwait.c (__sigwait): Use __sigandset,
	__sigisemptyset.  Don't use MASK uninitialized.

	* sysdeps/mach/hurd/sigprocmask.c (__sigprocmask): Use __sigorset.
	* hurd/hurdinit.c (_hurd_new_proc_init): Use __sigisemptyset.
	* hurd/hurdsig.c (_hurd_internal_post_signal): Use __sigismember,
	__sigdelset, __sigaddset, __sigorset.

	* sysdeps/generic/htonl.c: Use uint32_t instead of u_int32_t.